--- a/SETUP.qmd
+++ b/SETUP.qmd
@@ -70,7 +70,7 @@ You can do the same thing from the Rstudio terminal
 ```{bash}
 git config --global user.name "Your Name"
 git config --global user.email "your.email@example.com"
-# if you want to store the PAT once you enter it
+# if you want to store the PAT once you enter it, otherwise not necessary
 git config --global credential.helper store
 ```
 
